# app-embaixadores

./: .dockerignore  .env.example  .gitignore  .npmrc  GEMINI.md  Makefile  README.md  deploy.sh  design-system-inacio.md  docker-compose.yml  guia_configuracao_social_login.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.prod.yaml  render.yaml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1ce55a14588c_add_file_name_and_thumbnail_name_to_.py  a1b2c3d4e5f6_add_admin_users_and_permissions.py  c2a3f4e5d6b7_drop_invite_code_unique.py  d3b4c5e6f7a8_add_material_clicks.py  e4f5g6h7i8j9_add_point_configs.py  f5g6h7i8j9k0_fix_audit_logs_fk.py  g6h7i8j9k0l1_add_device_tokens.py  h7i8j9k0l1m2_add_system_notification_configs.py  i8j9k0l1m2n3_add_deleted_at_to_notifications.py  j9k0l1m2n3o4_update_point_configs.py
backend/scripts/: seed_admin.py  seed_all.py  seed_missions.py  staging_admin_migration.sql
backend/src/: main.py
backend/src/core/: config.py  database.py  security.py  supabase.py
backend/src/modules/admin/: dashboard_service.py  router.py  upload.py
backend/src/modules/admin_auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/modules/auth/: router.py  schemas.py  service.py
backend/src/modules/content/: constants.py  landing.py  models.py  router.py  schemas.py  service.py
backend/src/shared/: audit.py  exceptions.py  models.py  pagination.py  rate_limiter.py
backend/src/webapp/: index.html  manifest.json  sw.js
(+209 files in other folders)
